# BMP

./: CMakeLists.txt  README.md
include/: algo_cpu_matvec.hpp  algo_iface.hpp  algo_traversal.hpp  bench_utils.hpp  bitpack.hpp  contractor.hpp  from_dat.hpp  loader_dat.hpp  stats.hpp  traversal.hpp
src/: bench_bmp.cpp  bench_cells.cpp  bench_consensus.cpp  demo_load.cpp  main.cpp
